Make cosmetic changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -119,14 +119,13 @@
           </li>
 
           <!-- Toogle theme mode -->
-          {% comment %}
           <li class="toggle-container">
             <button id="light-toggle" title="Change theme">
               <i class="fas fa-moon"></i>
               <i class="fas fa-sun"></i>
             </button>
           </li>
-          {% endcomment %} {%- endif %}
+          {%- endif %}
         </ul>
       </div>
     </div>
